LexAndYaccParser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> expr
Rule 2     program -> program error expr
Rule 3     program -> error expr
Rule 4     expr -> expr + expr
Rule 5     expr -> expr - expr
Rule 6     expr -> expr * expr
Rule 7     expr -> expr / expr
Rule 8     expr -> expr NEQ expr
Rule 9     expr -> expr LE expr
Rule 10    expr -> expr GE expr
Rule 11    expr -> expr = expr
Rule 12    expr -> expr < expr
Rule 13    expr -> expr > expr
Rule 14    expr -> expr | expr
Rule 15    expr -> expr & expr
Rule 16    expr -> NIL
Rule 17    expr -> BREAK
Rule 18    expr -> - expr
Rule 19    expr -> INT
Rule 20    expr -> STRING
Rule 21    expr -> lvalue
Rule 22    lvalue -> ID
Rule 23    lvalue -> complexLValue
Rule 24    complexLValue -> subscript
Rule 25    complexLValue -> fieldExp
Rule 26    subscript -> complexLValue [ expr ]
Rule 27    subscript -> ID [ expr ]
Rule 28    fieldExp -> lvalue . ID
Rule 29    expr -> lvalue ASSIGN expr
Rule 30    expr -> ( exprSemiStar )
Rule 31    expr -> ID ( exprCommaStar )
Rule 32    expr -> ID [ expr ] OF expr
Rule 33    expr -> ID { fieldCreateCommaStar }
Rule 34    fieldCreate -> ID = expr
Rule 35    expr -> IF expr THEN expr
Rule 36    expr -> IF expr THEN expr ELSE expr
Rule 37    expr -> WHILE expr DO expr
Rule 38    expr -> FOR ID ASSIGN expr TO expr DO expr
Rule 39    expr -> LET decPlus IN exprSemiStar END
Rule 40    dec -> TYPE ID = ty
Rule 41    dec -> VAR ID ASSIGN expr
Rule 42    dec -> VAR ID : ID ASSIGN expr
Rule 43    dec -> FUNCTION ID ( fieldDecCommaStar ) = expr
Rule 44    dec -> FUNCTION ID ( fieldDecCommaStar ) : ID = expr
Rule 45    ty -> ID
Rule 46    ty -> ARRAY OF ID
Rule 47    ty -> { fieldDecCommaStar }
Rule 48    fieldDec -> ID : ID
Rule 49    fieldDecCommaStar -> <empty>
Rule 50    fieldDecCommaStar -> fieldDecCommaPlus
Rule 51    fieldDecCommaPlus -> fieldDec
Rule 52    fieldDecCommaPlus -> fieldDecCommaPlus , fieldDec
Rule 53    decPlus -> dec
Rule 54    decPlus -> error
Rule 55    decPlus -> decPlus dec
Rule 56    decPlus -> decPlus error
Rule 57    fieldCreateCommaStar -> <empty>
Rule 58    fieldCreateCommaStar -> fieldCreateCommaPlus
Rule 59    fieldCreateCommaPlus -> fieldCreate
Rule 60    fieldCreateCommaPlus -> fieldCreateCommaPlus , fieldCreate
Rule 61    exprSemiStar -> <empty>
Rule 62    exprSemiStar -> exprSemiPlus
Rule 63    exprSemiPlus -> expr
Rule 64    exprSemiPlus -> error
Rule 65    exprSemiPlus -> exprSemiPlus ; expr
Rule 66    exprSemiPlus -> exprSemiPlus error
Rule 67    exprCommaStar -> <empty>
Rule 68    exprCommaStar -> exprCommaPlus
Rule 69    exprCommaPlus -> expr
Rule 70    exprCommaPlus -> exprCommaPlus , expr

Terminals, with rules where they appear

&                    : 15
(                    : 30 31 43 44
)                    : 30 31 43 44
*                    : 6
+                    : 4
,                    : 52 60 70
-                    : 5 18
.                    : 28
/                    : 7
:                    : 42 44 48
;                    : 65
<                    : 12
=                    : 11 34 40 43 44
>                    : 13
ARRAY                : 46
ASSIGN               : 29 38 41 42
BREAK                : 17
DO                   : 37 38
ELSE                 : 36
END                  : 39
FOR                  : 38
FUNCTION             : 43 44
GE                   : 10
ID                   : 22 27 28 31 32 33 34 38 40 41 42 42 43 44 44 45 46 48 48
IF                   : 35 36
IN                   : 39
INT                  : 19
LE                   : 9
LET                  : 39
NEQ                  : 8
NIL                  : 16
OF                   : 32 46
STRING               : 20
THEN                 : 35 36
TO                   : 38
TYPE                 : 40
VAR                  : 41 42
WHILE                : 37
[                    : 26 27 32
]                    : 26 27 32
error                : 2 3 54 56 64 66
{                    : 33 47
|                    : 14
}                    : 33 47

Nonterminals, with rules where they appear

complexLValue        : 23 26
dec                  : 53 55
decPlus              : 39 55 56
expr                 : 1 2 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 18 26 27 29 32 32 34 35 35 36 36 36 37 37 38 38 38 41 42 43 44 63 65 69 70
exprCommaPlus        : 68 70
exprCommaStar        : 31
exprSemiPlus         : 62 65 66
exprSemiStar         : 30 39
fieldCreate          : 59 60
fieldCreateCommaPlus : 58 60
fieldCreateCommaStar : 33
fieldDec             : 51 52
fieldDecCommaPlus    : 50 52
fieldDecCommaStar    : 43 44 47
fieldExp             : 25
lvalue               : 21 28 29
program              : 2 0
subscript            : 24
ty                   : 40

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . expr
    (2) program -> . program error expr
    (3) program -> . error expr
    (4) expr -> . expr + expr
    (5) expr -> . expr - expr
    (6) expr -> . expr * expr
    (7) expr -> . expr / expr
    (8) expr -> . expr NEQ expr
    (9) expr -> . expr LE expr
    (10) expr -> . expr GE expr
    (11) expr -> . expr = expr
    (12) expr -> . expr < expr
    (13) expr -> . expr > expr
    (14) expr -> . expr | expr
    (15) expr -> . expr & expr
    (16) expr -> . NIL
    (17) expr -> . BREAK
    (18) expr -> . - expr
    (19) expr -> . INT
    (20) expr -> . STRING
    (21) expr -> . lvalue
    (29) expr -> . lvalue ASSIGN expr
    (30) expr -> . ( exprSemiStar )
    (31) expr -> . ID ( exprCommaStar )
    (32) expr -> . ID [ expr ] OF expr
    (33) expr -> . ID { fieldCreateCommaStar }
    (35) expr -> . IF expr THEN expr
    (36) expr -> . IF expr THEN expr ELSE expr
    (37) expr -> . WHILE expr DO expr
    (38) expr -> . FOR ID ASSIGN expr TO expr DO expr
    (39) expr -> . LET decPlus IN exprSemiStar END
    (22) lvalue -> . ID
    (23) lvalue -> . complexLValue
    (24) complexLValue -> . subscript
    (25) complexLValue -> . fieldExp
    (26) subscript -> . complexLValue [ expr ]
    (27) subscript -> . ID [ expr ]
    (28) fieldExp -> . lvalue . ID

    error           shift and go to state 3
    NIL             shift and go to state 5
    BREAK           shift and go to state 6
    -               shift and go to state 4
    INT             shift and go to state 7
    STRING          shift and go to state 8
    (               shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    LET             shift and go to state 15

    program                        shift and go to state 1
    expr                           shift and go to state 2
    lvalue                         shift and go to state 9
    complexLValue                  shift and go to state 16
    subscript                      shift and go to state 17
    fieldExp                       shift and go to state 18

state 1

    (0) S' -> program .
    (2) program -> program . error expr

    error           shift and go to state 19


state 2

    (1) program -> expr .
    (4) expr -> expr . + expr
    (5) expr -> expr . - expr
    (6) expr -> expr . * expr
    (7) expr -> expr . / expr
    (8) expr -> expr . NEQ expr
    (9) expr -> expr . LE expr
    (10) expr -> expr . GE expr
    (11) expr -> expr . = expr
    (12) expr -> expr . < expr
    (13) expr -> expr . > expr
    (14) expr -> expr . | expr
    (15) expr -> expr . & expr

    error           reduce using rule 1 (program -> expr .)
    $end            reduce using rule 1 (program -> expr .)
    +               shift and go to state 20
    -               shift and go to state 21
    *               shift and go to state 22
    /               shift and go to state 23
    NEQ             shift and go to state 24
    LE              shift and go to state 25
    GE              shift and go to state 26
    =               shift and go to state 27
    <               shift and go to state 28
    >               shift and go to state 29
    |               shift and go to state 30
    &               shift and go to state 31


state 3

    (3) program -> error . expr
    (4) expr -> . expr + expr
    (5) expr -> . expr - expr
    (6) expr -> . expr * expr
    (7) expr -> . expr / expr
    (8) expr -> . expr NEQ expr
    (9) expr -> . expr LE expr
    (10) expr -> . expr GE expr
    (11) expr -> . expr = expr
    (12) expr -> . expr < expr
    (13) expr -> . expr > expr
    (14) expr -> . expr | expr
    (15) expr -> . expr & expr
    (16) expr -> . NIL
    (17) expr -> . BREAK
    (18) expr -> . - expr
    (19) expr -> . INT
    (20) expr -> . STRING
    (21) expr -> . lvalue
    (29) expr -> . lvalue ASSIGN expr
    (30) expr -> . ( exprSemiStar )
    (31) expr -> . ID ( exprCommaStar )
    (32) expr -> . ID [ expr ] OF expr
    (33) expr -> . ID { fieldCreateCommaStar }
    (35) expr -> . IF expr THEN expr
    (36) expr -> . IF expr THEN expr ELSE expr
    (37) expr -> . WHILE expr DO expr
    (38) expr -> . FOR ID ASSIGN expr TO expr DO expr
    (39) expr -> . LET decPlus IN exprSemiStar END
    (22) lvalue -> . ID
    (23) lvalue -> . complexLValue
    (24) complexLValue -> . subscript
    (25) complexLValue -> . fieldExp
    (26) subscript -> . complexLValue [ expr ]
    (27) subscript -> . ID [ expr ]
    (28) fieldExp -> . lvalue . ID

    NIL             shift and go to state 5
    BREAK           shift and go to state 6
    -               shift and go to state 4
    INT             shift and go to state 7
    STRING          shift and go to state 8
    (               shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    LET             shift and go to state 15

    expr                           shift and go to state 32
    lvalue                         shift and go to state 9
    complexLValue                  shift and go to state 16
    subscript                      shift and go to state 17
    fieldExp                       shift and go to state 18

state 4

    (18) expr -> - . expr
    (4) expr -> . expr + expr
    (5) expr -> . expr - expr
    (6) expr -> . expr * expr
    (7) expr -> . expr / expr
    (8) expr -> . expr NEQ expr
    (9) expr -> . expr LE expr
    (10) expr -> . expr GE expr
    (11) expr -> . expr = expr
    (12) expr -> . expr < expr
    (13) expr -> . expr > expr
    (14) expr -> . expr | expr
    (15) expr -> . expr & expr
    (16) expr -> . NIL
    (17) expr -> . BREAK
    (18) expr -> . - expr
    (19) expr -> . INT
    (20) expr -> . STRING
    (21) expr -> . lvalue
    (29) expr -> . lvalue ASSIGN expr
    (30) expr -> . ( exprSemiStar )
    (31) expr -> . ID ( exprCommaStar )
    (32) expr -> . ID [ expr ] OF expr
    (33) expr -> . ID { fieldCreateCommaStar }
    (35) expr -> . IF expr THEN expr
    (36) expr -> . IF expr THEN expr ELSE expr
    (37) expr -> . WHILE expr DO expr
    (38) expr -> . FOR ID ASSIGN expr TO expr DO expr
    (39) expr -> . LET decPlus IN exprSemiStar END
    (22) lvalue -> . ID
    (23) lvalue -> . complexLValue
    (24) complexLValue -> . subscript
    (25) complexLValue -> . fieldExp
    (26) subscript -> . complexLValue [ expr ]
    (27) subscript -> . ID [ expr ]
    (28) fieldExp -> . lvalue . ID

    NIL             shift and go to state 5
    BREAK           shift and go to state 6
    -               shift and go to state 4
    INT             shift and go to state 7
    STRING          shift and go to state 8
    (               shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    LET             shift and go to state 15

    expr                           shift and go to state 33
    lvalue                         shift and go to state 9
    complexLValue                  shift and go to state 16
    subscript                      shift and go to state 17
    fieldExp                       shift and go to state 18

state 5

    (16) expr -> NIL .

    +               reduce using rule 16 (expr -> NIL .)
    -               reduce using rule 16 (expr -> NIL .)
    *               reduce using rule 16 (expr -> NIL .)
    /               reduce using rule 16 (expr -> NIL .)
    NEQ             reduce using rule 16 (expr -> NIL .)
    LE              reduce using rule 16 (expr -> NIL .)
    GE              reduce using rule 16 (expr -> NIL .)
    =               reduce using rule 16 (expr -> NIL .)
    <               reduce using rule 16 (expr -> NIL .)
    >               reduce using rule 16 (expr -> NIL .)
    |               reduce using rule 16 (expr -> NIL .)
    &               reduce using rule 16 (expr -> NIL .)
    error           reduce using rule 16 (expr -> NIL .)
    $end            reduce using rule 16 (expr -> NIL .)
    ;               reduce using rule 16 (expr -> NIL .)
    )               reduce using rule 16 (expr -> NIL .)
    THEN            reduce using rule 16 (expr -> NIL .)
    DO              reduce using rule 16 (expr -> NIL .)
    ,               reduce using rule 16 (expr -> NIL .)
    ]               reduce using rule 16 (expr -> NIL .)
    END             reduce using rule 16 (expr -> NIL .)
    ELSE            reduce using rule 16 (expr -> NIL .)
    TO              reduce using rule 16 (expr -> NIL .)
    }               reduce using rule 16 (expr -> NIL .)
    IN              reduce using rule 16 (expr -> NIL .)
    TYPE            reduce using rule 16 (expr -> NIL .)
    VAR             reduce using rule 16 (expr -> NIL .)
    FUNCTION        reduce using rule 16 (expr -> NIL .)


state 6

    (17) expr -> BREAK .

    +               reduce using rule 17 (expr -> BREAK .)
    -               reduce using rule 17 (expr -> BREAK .)
    *               reduce using rule 17 (expr -> BREAK .)
    /               reduce using rule 17 (expr -> BREAK .)
    NEQ             reduce using rule 17 (expr -> BREAK .)
    LE              reduce using rule 17 (expr -> BREAK .)
    GE              reduce using rule 17 (expr -> BREAK .)
    =               reduce using rule 17 (expr -> BREAK .)
    <               reduce using rule 17 (expr -> BREAK .)
    >               reduce using rule 17 (expr -> BREAK .)
    |               reduce using rule 17 (expr -> BREAK .)
    &               reduce using rule 17 (expr -> BREAK .)
    error           reduce using rule 17 (expr -> BREAK .)
    $end            reduce using rule 17 (expr -> BREAK .)
    ;               reduce using rule 17 (expr -> BREAK .)
    )               reduce using rule 17 (expr -> BREAK .)
    THEN            reduce using rule 17 (expr -> BREAK .)
    DO              reduce using rule 17 (expr -> BREAK .)
    ,               reduce using rule 17 (expr -> BREAK .)
    ]               reduce using rule 17 (expr -> BREAK .)
    END             reduce using rule 17 (expr -> BREAK .)
    ELSE            reduce using rule 17 (expr -> BREAK .)
    TO              reduce using rule 17 (expr -> BREAK .)
    }               reduce using rule 17 (expr -> BREAK .)
    IN              reduce using rule 17 (expr -> BREAK .)
    TYPE            reduce using rule 17 (expr -> BREAK .)
    VAR             reduce using rule 17 (expr -> BREAK .)
    FUNCTION        reduce using rule 17 (expr -> BREAK .)


state 7

    (19) expr -> INT .

    +               reduce using rule 19 (expr -> INT .)
    -               reduce using rule 19 (expr -> INT .)
    *               reduce using rule 19 (expr -> INT .)
    /               reduce using rule 19 (expr -> INT .)
    NEQ             reduce using rule 19 (expr -> INT .)
    LE              reduce using rule 19 (expr -> INT .)
    GE              reduce using rule 19 (expr -> INT .)
    =               reduce using rule 19 (expr -> INT .)
    <               reduce using rule 19 (expr -> INT .)
    >               reduce using rule 19 (expr -> INT .)
    |               reduce using rule 19 (expr -> INT .)
    &               reduce using rule 19 (expr -> INT .)
    error           reduce using rule 19 (expr -> INT .)
    $end            reduce using rule 19 (expr -> INT .)
    ;               reduce using rule 19 (expr -> INT .)
    )               reduce using rule 19 (expr -> INT .)
    THEN            reduce using rule 19 (expr -> INT .)
    DO              reduce using rule 19 (expr -> INT .)
    ,               reduce using rule 19 (expr -> INT .)
    ]               reduce using rule 19 (expr -> INT .)
    END             reduce using rule 19 (expr -> INT .)
    ELSE            reduce using rule 19 (expr -> INT .)
    TO              reduce using rule 19 (expr -> INT .)
    }               reduce using rule 19 (expr -> INT .)
    IN              reduce using rule 19 (expr -> INT .)
    TYPE            reduce using rule 19 (expr -> INT .)
    VAR             reduce using rule 19 (expr -> INT .)
    FUNCTION        reduce using rule 19 (expr -> INT .)


state 8

    (20) expr -> STRING .

    +               reduce using rule 20 (expr -> STRING .)
    -               reduce using rule 20 (expr -> STRING .)
    *               reduce using rule 20 (expr -> STRING .)
    /               reduce using rule 20 (expr -> STRING .)
    NEQ             reduce using rule 20 (expr -> STRING .)
    LE              reduce using rule 20 (expr -> STRING .)
    GE              reduce using rule 20 (expr -> STRING .)
    =               reduce using rule 20 (expr -> STRING .)
    <               reduce using rule 20 (expr -> STRING .)
    >               reduce using rule 20 (expr -> STRING .)
    |               reduce using rule 20 (expr -> STRING .)
    &               reduce using rule 20 (expr -> STRING .)
    error           reduce using rule 20 (expr -> STRING .)
    $end            reduce using rule 20 (expr -> STRING .)
    ;               reduce using rule 20 (expr -> STRING .)
    )               reduce using rule 20 (expr -> STRING .)
    THEN            reduce using rule 20 (expr -> STRING .)
    DO              reduce using rule 20 (expr -> STRING .)
    ,               reduce using rule 20 (expr -> STRING .)
    ]               reduce using rule 20 (expr -> STRING .)
    END             reduce using rule 20 (expr -> STRING .)
    ELSE            reduce using rule 20 (expr -> STRING .)
    TO              reduce using rule 20 (expr -> STRING .)
    }               reduce using rule 20 (expr -> STRING .)
    IN              reduce using rule 20 (expr -> STRING .)
    TYPE            reduce using rule 20 (expr -> STRING .)
    VAR             reduce using rule 20 (expr -> STRING .)
    FUNCTION        reduce using rule 20 (expr -> STRING .)


state 9

    (21) expr -> lvalue .
    (29) expr -> lvalue . ASSIGN expr
    (28) fieldExp -> lvalue . . ID

    +               reduce using rule 21 (expr -> lvalue .)
    -               reduce using rule 21 (expr -> lvalue .)
    *               reduce using rule 21 (expr -> lvalue .)
    /               reduce using rule 21 (expr -> lvalue .)
    NEQ             reduce using rule 21 (expr -> lvalue .)
    LE              reduce using rule 21 (expr -> lvalue .)
    GE              reduce using rule 21 (expr -> lvalue .)
    =               reduce using rule 21 (expr -> lvalue .)
    <               reduce using rule 21 (expr -> lvalue .)
    >               reduce using rule 21 (expr -> lvalue .)
    |               reduce using rule 21 (expr -> lvalue .)
    &               reduce using rule 21 (expr -> lvalue .)
    error           reduce using rule 21 (expr -> lvalue .)
    $end            reduce using rule 21 (expr -> lvalue .)
    ;               reduce using rule 21 (expr -> lvalue .)
    )               reduce using rule 21 (expr -> lvalue .)
    THEN            reduce using rule 21 (expr -> lvalue .)
    DO              reduce using rule 21 (expr -> lvalue .)
    ,               reduce using rule 21 (expr -> lvalue .)
    ]               reduce using rule 21 (expr -> lvalue .)
    END             reduce using rule 21 (expr -> lvalue .)
    ELSE            reduce using rule 21 (expr -> lvalue .)
    TO              reduce using rule 21 (expr -> lvalue .)
    }               reduce using rule 21 (expr -> lvalue .)
    IN              reduce using rule 21 (expr -> lvalue .)
    TYPE            reduce using rule 21 (expr -> lvalue .)
    VAR             reduce using rule 21 (expr -> lvalue .)
    FUNCTION        reduce using rule 21 (expr -> lvalue .)
    ASSIGN          shift and go to state 34
    .               shift and go to state 35


state 10

    (30) expr -> ( . exprSemiStar )
    (61) exprSemiStar -> .
    (62) exprSemiStar -> . exprSemiPlus
    (63) exprSemiPlus -> . expr
    (64) exprSemiPlus -> . error
    (65) exprSemiPlus -> . exprSemiPlus ; expr
    (66) exprSemiPlus -> . exprSemiPlus error
    (4) expr -> . expr + expr
    (5) expr -> . expr - expr
    (6) expr -> . expr * expr
    (7) expr -> . expr / expr
    (8) expr -> . expr NEQ expr
    (9) expr -> . expr LE expr
    (10) expr -> . expr GE expr
    (11) expr -> . expr = expr
    (12) expr -> . expr < expr
    (13) expr -> . expr > expr
    (14) expr -> . expr | expr
    (15) expr -> . expr & expr
    (16) expr -> . NIL
    (17) expr -> . BREAK
    (18) expr -> . - expr
    (19) expr -> . INT
    (20) expr -> . STRING
    (21) expr -> . lvalue
    (29) expr -> . lvalue ASSIGN expr
    (30) expr -> . ( exprSemiStar )
    (31) expr -> . ID ( exprCommaStar )
    (32) expr -> . ID [ expr ] OF expr
    (33) expr -> . ID { fieldCreateCommaStar }
    (35) expr -> . IF expr THEN expr
    (36) expr -> . IF expr THEN expr ELSE expr
    (37) expr -> . WHILE expr DO expr
    (38) expr -> . FOR ID ASSIGN expr TO expr DO expr
    (39) expr -> . LET decPlus IN exprSemiStar END
    (22) lvalue -> . ID
    (23) lvalue -> . complexLValue
    (24) complexLValue -> . subscript
    (25) complexLValue -> . fieldExp
    (26) subscript -> . complexLValue [ expr ]
    (27) subscript -> . ID [ expr ]
    (28) fieldExp -> . lvalue . ID

    )               reduce using rule 61 (exprSemiStar -> .)
    error           shift and go to state 39
    NIL             shift and go to state 5
    BREAK           shift and go to state 6
    -               shift and go to state 4
    INT             shift and go to state 7
    STRING          shift and go to state 8
    (               shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    LET             shift and go to state 15

    exprSemiStar                   shift and go to state 36
    exprSemiPlus                   shift and go to state 37
    expr                           shift and go to state 38
    lvalue                         shift and go to state 9
    complexLValue                  shift and go to state 16
    subscript                      shift and go to state 17
    fieldExp                       shift and go to state 18

state 11

    (31) expr -> ID . ( exprCommaStar )
    (32) expr -> ID . [ expr ] OF expr
    (33) expr -> ID . { fieldCreateCommaStar }
    (22) lvalue -> ID .
    (27) subscript -> ID . [ expr ]

    (               shift and go to state 40
    [               shift and go to state 41
    {               shift and go to state 42
    ASSIGN          reduce using rule 22 (lvalue -> ID .)
    .               reduce using rule 22 (lvalue -> ID .)
    +               reduce using rule 22 (lvalue -> ID .)
    -               reduce using rule 22 (lvalue -> ID .)
    *               reduce using rule 22 (lvalue -> ID .)
    /               reduce using rule 22 (lvalue -> ID .)
    NEQ             reduce using rule 22 (lvalue -> ID .)
    LE              reduce using rule 22 (lvalue -> ID .)
    GE              reduce using rule 22 (lvalue -> ID .)
    =               reduce using rule 22 (lvalue -> ID .)
    <               reduce using rule 22 (lvalue -> ID .)
    >               reduce using rule 22 (lvalue -> ID .)
    |               reduce using rule 22 (lvalue -> ID .)
    &               reduce using rule 22 (lvalue -> ID .)
    error           reduce using rule 22 (lvalue -> ID .)
    $end            reduce using rule 22 (lvalue -> ID .)
    ;               reduce using rule 22 (lvalue -> ID .)
    )               reduce using rule 22 (lvalue -> ID .)
    THEN            reduce using rule 22 (lvalue -> ID .)
    DO              reduce using rule 22 (lvalue -> ID .)
    ,               reduce using rule 22 (lvalue -> ID .)
    ]               reduce using rule 22 (lvalue -> ID .)
    END             reduce using rule 22 (lvalue -> ID .)
    ELSE            reduce using rule 22 (lvalue -> ID .)
    TO              reduce using rule 22 (lvalue -> ID .)
    }               reduce using rule 22 (lvalue -> ID .)
    IN              reduce using rule 22 (lvalue -> ID .)
    TYPE            reduce using rule 22 (lvalue -> ID .)
    VAR             reduce using rule 22 (lvalue -> ID .)
    FUNCTION        reduce using rule 22 (lvalue -> ID .)


state 12

    (35) expr -> IF . expr THEN expr
    (36) expr -> IF . expr THEN expr ELSE expr
    (4) expr -> . expr + expr
    (5) expr -> . expr - expr
    (6) expr -> . expr * expr
    (7) expr -> . expr / expr
    (8) expr -> . expr NEQ expr
    (9) expr -> . expr LE expr
    (10) expr -> . expr GE expr
    (11) expr -> . expr = expr
    (12) expr -> . expr < expr
    (13) expr -> . expr > expr
    (14) expr -> . expr | expr
    (15) expr -> . expr & expr
    (16) expr -> . NIL
    (17) expr -> . BREAK
    (18) expr -> . - expr
    (19) expr -> . INT
    (20) expr -> . STRING
    (21) expr -> . lvalue
    (29) expr -> . lvalue ASSIGN expr
    (30) expr -> . ( exprSemiStar )
    (31) expr -> . ID ( exprCommaStar )
    (32) expr -> . ID [ expr ] OF expr
    (33) expr -> . ID { fieldCreateCommaStar }
    (35) expr -> . IF expr THEN expr
    (36) expr -> . IF expr THEN expr ELSE expr
    (37) expr -> . WHILE expr DO expr
    (38) expr -> . FOR ID ASSIGN expr TO expr DO expr
    (39) expr -> . LET decPlus IN exprSemiStar END
    (22) lvalue -> . ID
    (23) lvalue -> . complexLValue
    (24) complexLValue -> . subscript
    (25) complexLValue -> . fieldExp
    (26) subscript -> . complexLValue [ expr ]
    (27) subscript -> . ID [ expr ]
    (28) fieldExp -> . lvalue . ID

    NIL             shift and go to state 5
    BREAK           shift and go to state 6
    -               shift and go to state 4
    INT             shift and go to state 7
    STRING          shift and go to state 8
    (               shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    LET             shift and go to state 15

    expr                           shift and go to state 43
    lvalue                         shift and go to state 9
    complexLValue                  shift and go to state 16
    subscript                      shift and go to state 17
    fieldExp                       shift and go to state 18

state 13

    (37) expr -> WHILE . expr DO expr
    (4) expr -> . expr + expr
    (5) expr -> . expr - expr
    (6) expr -> . expr * expr
    (7) expr -> . expr / expr
    (8) expr -> . expr NEQ expr
    (9) expr -> . expr LE expr
    (10) expr -> . expr GE expr
    (11) expr -> . expr = expr
    (12) expr -> . expr < expr
    (13) expr -> . expr > expr
    (14) expr -> . expr | expr
    (15) expr -> . expr & expr
    (16) expr -> . NIL
    (17) expr -> . BREAK
    (18) expr -> . - expr
    (19) expr -> . INT
    (20) expr -> . STRING
    (21) expr -> . lvalue
    (29) expr -> . lvalue ASSIGN expr
    (30) expr -> . ( exprSemiStar )
    (31) expr -> . ID ( exprCommaStar )
    (32) expr -> . ID [ expr ] OF expr
    (33) expr -> . ID { fieldCreateCommaStar }
    (35) expr -> . IF expr THEN expr
    (36) expr -> . IF expr THEN expr ELSE expr
    (37) expr -> . WHILE expr DO expr
    (38) expr -> . FOR ID ASSIGN expr TO expr DO expr
    (39) expr -> . LET decPlus IN exprSemiStar END
    (22) lvalue -> . ID
    (23) lvalue -> . complexLValue
    (24) complexLValue -> . subscript
    (25) complexLValue -> . fieldExp
    (26) subscript -> . complexLValue [ expr ]
    (27) subscript -> . ID [ expr ]
    (28) fieldExp -> . lvalue . ID

    NIL             shift and go to state 5
    BREAK           shift and go to state 6
    -               shift and go to state 4
    INT             shift and go to state 7
    STRING          shift and go to state 8
    (               shift and go to state 10
    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    LET             shift and go to state 15

    expr                           shift and go to state 44
    lvalue                         shift and go to state 9
    complexLValue                  shift and go to state 16
    subscript                      shift and go to state 17
    fieldExp                       shift and go to state 18

state 14

    (38) expr -> FOR . ID ASSIGN expr TO expr DO expr

    ID              shift and go to state 45


state 15

    (39) expr -> LET . decPlus IN exprSemiStar END
    (53) decPlus -> . dec
    (54) decPlus -> . error
    (55) decPlus -> . decPlus dec
    (56) decPlus -> . decPlus error
    (40) dec -> . TYPE ID = ty
    (41) dec -> . VAR ID ASSIGN expr
    (42) dec -> . VAR ID : ID ASSIGN expr
    (43) dec -> . FUNCTION ID ( fieldDecCommaStar ) = expr
    (44) dec -> . FUNCTION ID ( fieldDecCommaStar ) : ID = expr

    error           shift and go to state 48
    TYPE            shift and go to state 49
    VAR             shift and go to state 50
    FUNCTION        shift and go to state 51

    decPlus                        shift and go to state 46
    dec                            shift and go to state 47

state 16

    (23) lvalue -> complexLValue .
    (26) subscript -> complexLValue . [ expr ]

    ASSIGN          reduce using rule 23 (lvalue -> complexLValue .)
    .               reduce using rule 23 (lvalue -> complexLValue .)
    +               reduce using rule 23 (lvalue -> complexLValue .)
    -               reduce using rule 23 (lvalue -> complexLValue .)
    *               reduce using rule 23 (lvalue -> complexLValue .)
    /               reduce using rule 23 (lvalue -> complexLValue .)
    NEQ             reduce using rule 23 (lvalue -> complexLValue .)
    LE              reduce using rule 23 (lvalue -> complexLValue .)
    GE              reduce using rule 23 (lvalue -> complexLValue .)
    =               reduce using rule 23 (lvalue -> complexLValue .)
    <               reduce using rule 23 (lvalue -> complexLValue .)
    >               reduce using rule 23 (lvalue -> complexLValue .)
    |               reduce using rule 23 (lvalue -> complexLValue .)
    &               reduce using rule 23 (lvalue -> complexLValue .)
    error           reduce using rule 23 (lvalue -> complexLValue .)
    $end            reduce using rule 23 (lvalue -> complexLValue .)
    ;               reduce using rule 23 (lvalue -> complexLValue .)
    )               reduce using rule 23 (lvalue -> complexLValue .)
    THEN            reduce using rule 23 (lvalue -> complexLValue .)
    DO              reduce using rule 23 (lvalue -> complexLValue .)
    ,               reduce using rule 23 (lvalue -> complexLValue .)
    ]               reduce using rule 23 (lvalue -> complexLValue .)
    END             reduce using rule 23 (lvalue -> complexLValue .)
    ELSE            reduce using rule 23 (lvalue -> complexLValue .)
    TO              reduce using rule 23 (lvalue -> complexLValue .)
    }               reduce using rule 23 (lvalue -> complexLValue .)
    IN              reduce using rule 23 (lvalue -> complexLValue .)
    TYPE            reduce using rule 23 (lvalue -> complexLValue .)
    VAR             reduce using rule 23 (lvalue -> complexLValue .)
    FUNCTION        reduce using rule 23 (lvalue -> complexLValue .)
    [               shift and go to state 52


state 17

    (24) complexLValue -> subscript .
